# pathtracer-cpp

./: .clang-format  .gitattributes  .gitignore  README.md
benchmark/spp/: graph.py
examples/: BUILD.bazel  cornell_box.cc  modified_cornell.cc
examples/cats/: cats.cc  cats.mtl
examples/cornell/: default.cc  script.cc
fpng/: BUILD.bazel
main/: BUILD.bazel  main.cc
pathtracer/: BUILD.bazel  aabb.h  bvh.h  bvh_test.cc  camera.h  fpng.cc  fpng.h  image.h  linalg.h  material.h  object.h  onetime.frag  pathtracer.h  realtime.frag  render.h  rng.h  scene.h  shader.frag  shader.h  test_scene.cc  tiny_obj_loader.h  triangle.h
raytracer/: BUILD.bazel  camera.h  image.h  light.h  linalg.h  material.h  object.h  raytracer.h  render.h  rng.h  scene.h
shader/: BUILD.bazel  pathtracer.frag  sfml_linalg.h  window.cc
tests/: BUILD.bazel  test_gl_wrapper.cc  test_realtime.cc  test_render.cc
