load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    copts = [
        "-std=c++17", # for unique_ptr
        "-O3",
    ],
    deps = [
        "//raytracer:render",
        "//raytracer:object",
        "//raytracer:light",
        "//raytracer:image",
        "//fpng:fpng",
    ],
)