load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "fpng",
    srcs = ["fpng.cc"],
    hdrs = ["fpng.h"],
    copts = [
        "-DFPNG_NO_SSE",
        "-w",
    ],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "linalg",
    hdrs = ["linalg.h"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "rng",
    hdrs = ["rng.h"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "image",
    hdrs = ["image.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":fpng",
        ":linalg",
    ],
)

cc_library(
    name = "camera",
    hdrs = ["camera.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":linalg",
        ":rng",
    ],
)

cc_library(
    name = "aabb",
    hdrs = ["aabb.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":linalg",
    ],
)

cc_library(
    name = "material",
    hdrs = ["material.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":linalg",
        ":rng",
    ],
)

cc_library(
    name = "object",
    hdrs = ["object.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":linalg",
        ":material",
    ],
)

cc_library(
    name = "scene",
    hdrs = ["scene.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":camera",
        ":image",
        ":linalg",
        ":material",
        ":object",
    ],
)

cc_library(
    name = "bvh",
    hdrs = ["bvh.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":aabb",
        ":linalg",
        ":object",
    ],
)

cc_binary(
    name = "test_scene",
    srcs = ["test_scene.cc"],
    copts = [
        "-std=c++17",
        "-O3",
    ],
    deps = [
        ":scene",
    ],
)

cc_binary(
    name = "bvh_test",
    srcs = ["bvh_test.cc"],
    copts = [
        "-std=c++17",
        "-O3",
    ],
    deps = [
        ":bvh",
    ],
)
