load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fpng",
    srcs = ["fpng.cc"],
    hdrs = ["fpng.h"],
    copts = [
        "-DFPNG_NO_SSE",
        "-w",
    ],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "tinyobj",
    srcs = ["tiny_obj_loader.cc"],
    hdrs = ["tiny_obj_loader.h"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "linalg",
    hdrs = ["linalg.h"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "rng",
    hdrs = ["rng.h"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "shader",
    hdrs = ["shader.h"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "image",
    hdrs = ["image.h"],
    visibility = ["//visibility:private"],
    deps =
        [
            ":fpng",
            ":linalg",
        ],
)

cc_library(
    name = "camera",
    hdrs = ["camera.h"],
    visibility = ["//visibility:private"],
    deps =
        [
            ":linalg",
            ":rng",
        ],
)

cc_library(
    name = "aabb",
    hdrs = ["aabb.h"],
    visibility = ["//visibility:private"],
    deps =
        [
            ":linalg",
        ],
)

cc_library(
    name = "material",
    hdrs = ["material.h"],
    visibility = ["//visibility:private"],
    deps =
        [
            ":linalg",
            ":rng",
        ],
)

cc_library(
    name = "triangle",
    hdrs = ["triangle.h"],
    visibility = ["//visibility:private"],
    deps =
        [
            ":aabb",
            ":linalg",
            ":material",
        ],
)

cc_library(
    name = "bvh",
    hdrs = ["bvh.h"],
    visibility = ["//visibility:private"],
    deps =
        [
            ":aabb",
            ":linalg",
            ":material",
            ":tinyobj",
            ":triangle",
        ],
)

cc_library(
    name = "render",
    hdrs = ["render.h"],
    linkopts = [
        "-lsfml-graphics",
        "-lsfml-window",
        "-lsfml-system",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":bvh",
        ":camera",
        ":image",
        ":linalg",
        ":shader",
    ],
)

cc_library(
    name = "pathtracer",
    hdrs = ["pathtracer.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":bvh",
        ":camera",
        ":linalg",
        ":material",
        ":render",
        ":triangle",
    ],
)
