load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "test_render",
    srcs = ["test_render.cc"],
    copts = [
        "-std=c++17",
        "-O3",
    ],
    deps = ["//pathtracer"],
)

cc_binary(
    name = "test_gl_wrapper",
    srcs = ["test_gl_wrapper.cc"],
    copts = [
        "-std=c++17",
        "-O3",
    ],
    deps = ["//pathtracer"],
)
